--- a/package.json
+++ b/package.json
@@ -21,26 +21,34 @@
   },
   "homepage": "https://github.com/regiomedia/bitrix-project#readme",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.1",
     "@symfony/webpack-encore": "^0.17.0",
     "autoprefixer": "^7.2.3",
     "babel-eslint": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "^1.0.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-vue": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.23.1",
     "stylefmt": "^6.0.0",
     "stylelint": "^8.4.0",
     "stylelint-config-sass-guidelines": "^4.0.1",
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.1.0",
     "vue-loader": "^13.6.1",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.13"
   }
 }
