--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,9 @@
     "node_modules/**/*"
   ],
   "presets": [
-    "es2015"
+    "@babel/preset-env"
   ],
   "plugins": [
-    "syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
