--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "notamedia/console-jedi": "^1.2",
         "vlucas/phpdotenv": "^2.4",
         "bitrix-expert/monolog-adapter": "^1.0",
-        "illuminate/events": "^5.5"
+        "illuminate/events": "^5.5",
+        "ext-mysqli": "*"
     },
 
     "require-dev": {
