--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "encore": "encore",
+    "codecrumbs": "codecrumbs -d \"local/assets/scripts/\" -e \"local/assets/scripts/main.js\" ; exit 0",
     "lint:scripts": "eslint \"local/assets/scripts/**/*.+(js|vue)\" ; exit 0",
     "lint:styles": "stylelint \"local/assets/styles/**/*.scss\" ; exit 0",
     "fix:scripts": "eslint \"local/assets/scripts/**/*.+(js|vue)\" --fix; exit 0",
@@ -21,36 +22,43 @@
   },
   "homepage": "https://github.com/regiomedia/bitrix-project#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.5",
-    "@fortawesome/fontawesome-free": "^5.4.2",
+    "@babel/preset-env": "^7.3.4",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@symfony/webpack-encore": "^0.21.0",
     "autoprefixer": "^7.2.3",
     "babel-eslint": "^8.2.6",
+    "codecrumbs": "^1.1.5",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^7.0.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylefmt": "^6.0.3",
-    "stylelint": "^8.4.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-sass-guidelines": "^4.0.1",
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.1.0",
-    "vue-loader": "^15.0.11",
-    "vue-template-compiler": "^2.5.13",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.7",
     "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "owl.carousel": "^2.3.4",
-    "vue": "^2.5.13"
+    "2gis-maps": "^3.5.5",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
+    "moment": "^2.24.0",
+    "vue": "^2.6.7",
+    "vue-moment": "^4.0.0",
+    "vue-mq": "^1.0.1",
+    "vue-resource": "^1.5.1",
+    "vuelidate": "^0.7.4",
+    "weekstart": "^1.0.0"
   }
 }
