vaa/SUPPORT-59: Настроить базовую сборку на Битрикс

--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
     "codecrumbs": "codecrumbs -d \"local/assets/scripts/\" -e \"local/assets/scripts/main.js\" ; exit 0",
     "lint:scripts": "eslint \"local/assets/scripts/**/*.+(js|vue)\" ; exit 0",
     "lint:styles": "stylelint \"local/assets/styles/**/*.scss\" ; exit 0",
-    "lint:php": "composer lint:php ; exit 0",
     "fix:scripts": "eslint \"local/assets/scripts/**/*.+(js|vue)\" --fix; exit 0",
-    "fix:styles": "stylelint \"local/assets/styles/**/*.scss\" --fix ; exit 0",
-    "fix:php": "composer fix:php ; exit 0",
-    "dev": "encore dev",
-    "prod": "encore prod",
-    "watch": "encore dev --watch"
+    "fix:styles": "stylefmt -r \"local/assets/styles/**/*.scss\" ; exit 0"
   },
   "repository": {
     "type": "git",
@@ -34,32 +29,35 @@
     "@symfony/webpack-encore": "^0.21.0",
     "autoprefixer": "^7.2.3",
     "babel-eslint": "^8.2.6",
-    "codecrumbs": "^1.1.5",
+    "codecrumbs": "^1.1.6",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "^2.1.0",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^6.0.6",
-    "stylelint": "^9.6.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylefmt": "^6.0.3",
+    "stylelint": "^9.10.1",
     "stylelint-config-sass-guidelines": "^5.2.0",
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.3.0",
-    "vue-loader": "^13.7.1",
-    "vue-template-compiler": "^2.5.13"
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.8",
+    "webpack-notifier": "^1.7.0"
   },
   "dependencies": {
     "2gis-maps": "^3.5.5",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.13",
     "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
     "vue": "^2.6.7",
     "vue-moment": "^4.0.0",
     "vue-mq": "^1.0.1",
     "vue-resource": "^1.5.1",
-    "vuelidate": "^0.7.4",
-    "weekstart": "^1.0.0"
+    "vuelidate": "^0.7.4"
   }
 }
