--- a/package.json
+++ b/package.json
@@ -26,25 +26,25 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.5.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@symfony/webpack-encore": "^0.21.0",
-    "autoprefixer": "^7.2.3",
-    "babel-eslint": "^8.2.6",
+    "@symfony/webpack-encore": "^0.28.0",
+    "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
     "codecrumbs": "^1.6.6",
-    "copy-webpack-plugin": "^4.5.4",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^1.0.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "style-loader": "^0.23.1",
     "stylefmt": "^6.0.3",
-    "stylelint": "^9.10.1",
-    "stylelint-config-sass-guidelines": "^5.2.0",
-    "stylelint-order": "^0.7.0",
-    "stylelint-scss": "^2.3.0",
+    "stylelint": "^11.0.0",
+    "stylelint-config-sass-guidelines": "^6.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.10.1",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.8",
     "webpack-notifier": "^1.8.0"
@@ -53,6 +53,7 @@
     "2gis-maps": "^3.5.8",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
+    "npm-check": "^5.9.0",
     "popper.js": "^1.15.0",
     "vue": "^2.6.7",
     "vue-moment": "^4.0.0",
