--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-eslint": "^10.0.3",
     "codecrumbs": "^1.6.6",
     "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^2.1.1",
+    "css-loader": "2.1.1",
     "eslint": "^6.4.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.0",
@@ -42,7 +42,7 @@
     "style-loader": "^1.0.0",
     "stylefmt": "^6.0.3",
     "stylelint": "^11.0.0",
-    "stylelint-config-sass-guidelines": "^6.0.0",
+    "stylelint-config-sass-guidelines": "^6.1.0",
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.11.0",
     "vue-loader": "^15.7.1",
