--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "style-loader": "^1.0.0",
     "stylefmt": "^6.0.3",
     "stylelint": "^11.0.0",
+    "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-sass-guidelines": "^6.1.0",
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.11.0",
