--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@symfony/webpack-encore": "^0.28.0",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.6.4",
     "babel-eslint": "^10.0.3",
     "codecrumbs": "^1.6.6",
     "copy-webpack-plugin": "^5.0.4",
@@ -38,6 +39,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "stylefmt": "^6.0.3",
