--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylelint-config-sass-guidelines": "^6.1.0",
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.11.0",
+    "svg-spritemap-webpack-plugin": "^3.5.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.8",
     "webpack-notifier": "^1.8.0"
