--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,68 @@
 {
-    "require": {
-        "arrilot/bitrix-migrations": "^2.2",
-        "arrilot/bitrix-models": "^0.7.13",
-        "maximaster/tools.twig": "^1.1",
-        "bitrix-expert/bbc": "^1.0",
-        "illuminate/database": "^5.6",
-        "illuminate/events": "^5.6",
-        "kint-php/kint": "^3.0",
-        "kint-php/kint-twig": "^2.0",
-        "bitrix-expert/tools": "^1.5",
-        "notamedia/console-jedi": "^1.2",
-        "vlucas/phpdotenv": "^2.4",
-        "bitrix-expert/monolog-adapter": "^1.0",
-        "ext-mysqli": "*"
-    },
+  "require": {
+    "arrilot/bitrix-migrations": "^2.2",
+    "arrilot/bitrix-models": "^0.7.13",
+    "maximaster/tools.twig": "^1.1",
+    "bitrix-expert/bbc": "^1.0",
+    "illuminate/database": "^5.6",
+    "illuminate/events": "^5.6",
+    "kint-php/kint": "^3.0",
+    "kint-php/kint-twig": "^2.0",
+    "notamedia/console-jedi": "^1.2",
+    "vlucas/phpdotenv": "^2.4",
+    "bitrix-expert/monolog-adapter": "^1.0",
+    "ext-mysqli": "*",
+    "intervention/image": "^2.5",
+    "mmucklo/krumo": "^0.6.0",
+    "dompdf/dompdf": "^0.8.3",
+    "illuminate/validation": "5.7",
+    "symfony/dependency-injection": "^4.4",
+    "zeptech/annotations": "^1.1",
+    "symfony/http-kernel": "^4.4",
+    "symfony/routing": "^4.4",
+    "league/flysystem": "^1.0",
+    "spatie/data-transfer-object": "^1.13",
+    "symfony/security-csrf": "^4.4",
+    "symfony/framework-bundle": "^4.1",
+    "symfony/serializer": "^4.4",
+    "symfony/property-info": "^4.4",
+    "symfony/property-access": "^4.4",
+    "symfony/expression-language": "^5.2",
+    "symfony/debug": "^4.4",
+    "symfony/var-dumper": "^4.4",
+    "webarchitect609/bitrix-cache": "^1.6",
+    "waavi/sanitizer": "^1.0",
+    "giggsey/libphonenumber-for-php": "^8.12",
+    "egulias/email-validator": "^2.1",
+    "symfony/monolog-bundle": "^3.6",
+    "doctrine/common": "^3.0",
+    "doctrine/annotations": "^1.10",
+    "denismitr/translit": "^2.3",
+    "guzzlehttp/guzzle": "^6.5",
+    "ifsnop/mysqldump-php": "^2.9"
+  },
 
-    "require-dev": {
-        "squizlabs/php_codesniffer": "2.*"
-    },
-    "scripts": {
-        "lint:php": "php ./vendor/bin/phpcs  --encoding=utf-8 --ignore=./local/components/*/templates/*  --standard=ruleset.xml --extensions=php  ./local/classes ./local/components",
-        "fix:php":  "php ./vendor/bin/phpcbf --encoding=utf-8 --ignore=./local/components/*/templates/*  --standard=ruleset.xml --extensions=php  ./local/classes ./local/components"
-    },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "2.*"
+  },
+  "scripts": {
+    "lint:php": "php ./vendor/bin/phpcs  --encoding=utf-8 --ignore=./local/components/*/templates/*  --standard=ruleset.xml --extensions=php  ./local/classes ./local/components",
+    "fix:php":  "php ./vendor/bin/phpcbf --encoding=utf-8 --ignore=./local/components/*/templates/*  --standard=ruleset.xml --extensions=php  ./local/classes ./local/components"
+  },
 
-    "autoload": {
-        "psr-4": {"Local\\" : "local/classes/"}
-    },
+  "autoload": {
+    "psr-4": {"Local\\" : "local/classes/"},
+    "files": [
+      "local/functions/container.php",
+      "local/functions/helpers.php"
+    ]
+  },
 
-    "extra": {
-        "installer-paths": {
-            "./bitrix/modules/{$name}/": ["type:bitrix-d7-module", "type:bitrix-module"],
-            "./bitrix/components/{$name}/": ["type:bitrix-d7-component", "type:bitrix-component"],
-            "./bitrix/templates/{$name}/": ["type:bitrix-d7-template", "type:bitrix-theme"]
-        }
+  "extra": {
+    "installer-paths": {
+      "./bitrix/modules/{$name}/": ["type:bitrix-d7-module", "type:bitrix-module"],
+      "./bitrix/components/{$name}/": ["type:bitrix-d7-component", "type:bitrix-component"],
+      "./bitrix/templates/{$name}/": ["type:bitrix-d7-template", "type:bitrix-theme"]
     }
+  }
 }
