--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitrix-project",
+  "name": "bitrix/marketplace",
   "version": "0.0.1",
   "description": "BitrixCMS-based project's initial structure",
   "main": "index.js",
@@ -22,47 +22,57 @@
   },
   "homepage": "https://github.com/regiomedia/bitrix-project#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.5.5",
-    "@fortawesome/fontawesome-free": "^5.9.0",
-    "@symfony/webpack-encore": "^0.28.0",
-    "autoprefixer": "^9.6.4",
-    "babel-eslint": "^10.0.3",
-    "codecrumbs": "^1.6.6",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "2.1.1",
-    "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.11.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "stylefmt": "^6.0.3",
-    "stylelint": "^11.0.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-sass-guidelines": "^6.1.0",
-    "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.11.0",
-    "svg-spritemap-webpack-plugin": "^3.5.0",
-    "vue-loader": "^15.7.1",
-    "vue-template-compiler": "^2.6.8",
-    "webpack-notifier": "^1.8.0"
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.18.6",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@symfony/webpack-encore": "^2.1.0",
+    "@vue/vue3-jest": "^28.0.1",
+    "autoprefixer": "^10.4.7",
+    "babel-eslint": "^10.1.0",
+    "codecrumbs": "^1.8.3",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "^7.0.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "stylefmt": "^0.0.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-rational-order": "^0.0.4",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.2.0",
+    "svg-spritemap-webpack-plugin": "^4.4.2",
+    "typescript": "^4.7.4",
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
-    "2gis-maps": "^3.5.8",
-    "bootstrap": "^4.3.1",
-    "moment": "^2.24.0",
-    "npm-check": "^5.9.0",
-    "popper.js": "^1.15.0",
-    "vue": "^2.6.7",
-    "vue-moment": "^4.0.0",
+    "@vuelidate/core": "^2.0.0-alpha.42",
+    "@vuelidate/validators": "^2.0.0-alpha.30",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "custom-select": "^1.1.15",
+    "element-closest": "^3.0.2",
+    "infinite-scroll": "^4.0.1",
+    "lightgallery.js": "^1.4.0",
+    "moment": "^2.29.3",
+    "npm-check": "^5.9.2",
+    "v-click-outside": "^3.2.0",
+    "vue": "^3.2.37",
+    "vue-imask": "^6.4.2",
+    "vue-moment": "^4.1.0",
     "vue-mq": "^1.0.1",
-    "vue-resource": "^1.5.1",
-    "vuelidate": "^0.7.4"
+    "vue-resource": "^1.5.3",
+    "vue-slick": "^1.1.20",
+    "vuelidate": "^0.7.7"
   }
 }
